--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="Maddie Srnka" content="">
 
-    <title>Dante Pasionek</title>
+    <title>Maddie Srnka</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
